# sdl3-gpu-platformer

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  aaaa.gitmodules  vcpkg.json
shaders/: sprite.frag  sprite.vert
src/: audio.cpp  audio.hpp  context.hpp  ecs.hpp  engine.cpp  engine.hpp  game.cpp  game.hpp  input.cpp  input.hpp  main.cpp  physics.cpp  physics.hpp  read_file.cpp  read_file.hpp  registry.hpp  renderer.cpp  renderer.hpp  sprite.frag  sprite.vert  sprite_render_pass.cpp  sprite_render_pass.hpp  systems.hpp  texture.cpp  texture.hpp  triangle.vert
